2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.h: move some text-related typedefs into the fontface
	header since they're needed for new user font API and that's really where they
	should be owned.  context.h includes fontface.h, so there should not be any
	breakage for people who were just including context.h
	* cairomm/enums.h: add user font type to font type enum
	* cairomm/fontface.cc:
	* cairomm/fontface.h: add UserFontFace class.  This class has a set of
	callbacks that can be used to do certain things.  In order to do this in a
	flexible way, I have added libsigc++ as a dependency of cairo to achieve this
	* configure.in: add check for libsigc++
	* tests/test-font-face.cc: add tests for UserFontFace

2008-08-15  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.h:
	* cairomm/scaledfont.cc: the static ::create() function took a FontFace by
	reference rather than by RefPtr, which means the API was essentially unusably
	broken.  So this is an API break, but I don't see any other option.

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* .gitignore: added new files to ignore
	* cairomm/fontface.cc:
	* cairomm/fontface.h: implement the ToyFontFace class
	* configure.in:
	* examples/Makefile.am:
	* examples/text/Makefile.am: Renamed from examples/text-rotate/Makefile.am.
	* examples/text/text-rotate.cc: Renamed from examples/text-rotate/text-rotate.cc.
	* examples/text/toy-text.cc: Added.
	* tests/Makefile.am:
	* tests/test-font-face.cc: Added.  excercise the functionality of
	ToyFontFace slightly

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* m4/ax_boost_test_exec_monitor.m4: added this file which was forgotten
	earlier.  I'm not entirely sure if it's necessary, but just in case...

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: post-release bump

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS:
	* configure.in: update for 1.6.2 release
