@@ -1,3 +1,9 @@
+2008-08-18  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* cairomm/scaledfont.h: fix all of the TODOS by providing alternate functions
+	that begin with get_ to provide consistency with other parts of cairomm (and
+	glibmm, etc).
+
 2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* cairomm/context.h: move some text-related typedefs into the fontface
